--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,122 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html, body {
-    overflow: hidden;
+html,
+body {
+  overflow: hidden;
 }
 
-#three-canvas{
-    position: fixed;
-    top: 0;
-    left: 0;
-    outline: none;
+#three-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  outline: none;
 }
 
-#file-input{
-    z-index: 1;
-    position: absolute;
-    left: 100%;
-    transform: translateX(-100%);
+#file-input {
+  z-index: 1;
+  position: absolute;
+  left: 100%;
+  transform: translateX(-100%);
 }
+
+/* Properties tab */
 
 .message-container {
-    z-index: 1;
-    position: absolute;
-    margin: 16px;
-    background-color: rgba(255,255,255,0.8);
-    display: inline-block;
-    padding: 10px;
-    overflow: auto;
-    width: 33vw;
-    height: 100vh;
+  z-index: 1;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: inline-block;
+  padding: 10px;
+  overflow: auto;
+  width: 33vw;
+  height: 100vh;
 }
 
 .message {
-    display: inline;
-    color: black;
+  display: inline;
+  color: black;
 }
 
-.hidden{
-    display: none;
+/* Spatial tree tab */
+
+.tree-container {
+  z-index: 1;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: inline-block;
+  padding: 10px;
+  overflow: auto;
+  width: 33vw;
+  height: 100vh;
+  left: 100%;
+  transform: translateX(-100%);
+  display: flex;
+  flex-direction: column;
+}
+
+.tree-tabs-container {
+  display: flex;
+  border-bottom: solid black 1px;
+}
+
+.tree-tab {
+  cursor: pointer;
+  border: solid black 1px;
+  padding: 5px;
+  z-index: 3;
+  border-bottom: none;
+}
+
+.tree-tab:hover {
+  background-color: aquamarine;
+}
+
+.tree-tab.tab-active {
+  z-index: 1;
+}
+
+.tree-content-container {
+  border-top: solid black 1px;
+}
+
+.tree-content-container ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.tree-content-container ul > li {
+  margin-left: 5px;
+  border-top: solid 1px lightblue;
+}
+
+.tree-content-container li > ul {
+  margin-left: 5px;
+}
+
+.tree-content span {
+  cursor: pointer;
+  user-select: none;
+}
+
+.caret {
+  cursor: pointer;
+  user-select: none;
+}
+.caret::before {
+  content: "\25B6";
+  color: black;
+  display: inline-block;
+  margin-right: 6px;
+}
+.caret-down::before {
+  transform: rotate(90deg);
+}
+
+.hidden {
+  display: none;
 }
