Implemented modal and loading popup styles

--- a/styles.css
+++ b/styles.css
@@ -144,21 +144,31 @@ body {
   height: 100%;
   background-color: var(--transparent-background-dark);
   z-index: 1;
+  display: grid;
+  place-items: center;
 }
 
 /* Loading popup */
 
 .modal-loading-container{
-  width: 100%;
+  width: max-content;
   max-width: 300px;
-  height: 100%;
+  height: max-content;
   max-height: 300px;
   border: var(--primary-color-dark) 1px solid;
   background-color: white;
-  padding: 20px;
+  padding: 50px 100px;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   place-items: center;
+  gap: 30px;
+  font-size: 30px;
+  border-radius: 10px;
+  user-select: none;
+}
+
+.modal-loading-container>i{
+  font-size: 40px;
 }
 
 /* #region animations */
