--- a/styles.css
+++ b/styles.css
@@ -49,9 +49,9 @@ body {
   color: black;
 }
 
-/* Spatial tree tab */
+/* Feature sidebar tab */
 
-.tree-container {
+.feature-container {
   z-index: 1;
   position: absolute;
   background-color: var(--transparent-background-light);
@@ -66,12 +66,12 @@ body {
   flex-direction: column;
 }
 
-.tree-tabs-container {
+.feature-tabs-container {
   display: flex;
   border-bottom: solid black 1px;
 }
 
-.tree-tab {
+.feature-tab {
   cursor: pointer;
   border: solid black 1px;
   padding: 5px;
@@ -79,17 +79,24 @@ body {
   border-bottom: none;
 }
 
-.tree-tab.tab-active {
+.feature-tab.tab-active {
   background-color: var(--primary-color-light);
   z-index: 1;
 }
 
-.tree-tab:hover {
+.feature-tab:hover {
   background-color: var(--primary-color);
 }
 
-.tree-content-container {
+.feature-content-container {
   border-top: solid black 1px;
+}
+
+/* Spatial tree */
+
+.tree-container {
+  width: 100%;
+  height: 100%;
 }
 
 .tree-content-container ul {
