--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 :root {
-  --primary-color: cyan;
-  --primary-color-dark: darkcyan;
-  --primary-color-light: lightcyan;
+  --primary-color: #1a6dff;
+  --primary-color-dark: #152243;
+  --primary-color-light: #9fd1ff;
   --transparent-background-light: rgba(255, 255, 255, 0.8);
   --transparent-background-dark: rgba(0, 20, 20, 0.8);
+  --grayed: #9a9a9a;
 }
 
 * {
@@ -31,16 +32,17 @@ body {
   transform: translateX(-100%);
 }
 
-/* Tools side tab */
+/* #region Tools side tab */
 
 .tools-side-container {
   z-index: 1;
   position: absolute;
-  background-color: pink;
+  background-color: transparent;
   display: inline-block;
-  padding: 10px;
+  padding: 10px 0 10px 10px;
   height: 100vh;
   font-family: Montserrat;
+  overflow-y: scroll;
 }
 
 .tools-side-content {
@@ -48,11 +50,14 @@ body {
   gap: 21px;
 }
 
-.tools-side-feature{
+.tools-side-feature {
   max-width: 360px;
-  border-radius: 4px;
+  border-radius: 8px;
   display: grid;
   place-items: start;
+  overflow: hidden;
+  filter: drop-shadow(0px 12px 16px rgba(0, 0, 0, 0.08));
+  border: none;
 }
 
 .tools-side-feature-icon {
@@ -62,53 +67,120 @@ body {
   place-items: center;
   padding: 8px;
   border-radius: 4px;
-  background-color: #152243;
-  box-shadow: 0px 1px 1px 0 #1A6DFF;
+  background-color: var(--primary-color-dark);
+  box-shadow: 0px 1px 1px 0 var(--primary-color);
 }
 
-.tools-side-feature>:not(.tools-side-feature-icon){
+.tools-side-feature > :not(.tools-side-feature-icon) {
   display: none;
 }
 
-.tools-side-feature.feature-active>:not(.tools-side-feature-icon){
+.tools-side-feature.feature-active > :not(.tools-side-feature-icon) {
   display: block;
 }
 
-.tools-side-feature.feature-active{
-  background-color: #152243;
-  box-shadow: 0px 1px 1px 0 gray;
+.tools-side-feature.feature-active {
+  background-color: var(--primary-color-dark);
   grid-template-columns: 40px auto 39px;
   place-items: center;
+  font-size: 16px;
+  line-height: 20px;
 }
 
-.tools-side-feature.feature-active .tools-side-feature-icon{
+.tools-side-feature-icon {
   box-shadow: none;
 }
 
-.tools-side-feature.feature-active .tools-side-feature-header{
+.tools-side-feature-header {
   color: white;
   width: 100%;
+  font-weight: 700;
 }
-.tools-side-feature.feature-active .tools-side-feature-close{
+.tools-side-feature-close {
   margin: 0 10px 0 5px;
   height: 24px;
 }
 
-.tools-side-feature.feature-active .tools-side-feature-name{
-  background-color: #9FD1FF;
+.tools-side-feature-name {
+  background-color: var(--primary-color-light);
   color: white;
   width: 100%;
   padding: 5px 10px;
   overflow: hidden;
   grid-column: span 3;
+  font-weight: 500;
 }
 
-.tools-side-feature.feature-active .tools-side-feature-content{
+.tools-side-feature-content {
   width: 340px;
   max-width: 33vw;
   background-color: white;
   grid-column: span 3;
 }
+
+.tools-side-properties-tabs {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+  box-shadow: inset 0 -1px 0px 0px lightgray;
+  color: var(--grayed);
+  font-size: 14px;
+}
+
+.tools-side-properties-tab {
+  box-sizing: border-box;
+  padding: 5px 0 3px 0;
+}
+
+.tools-side-properties-tab.tab-active {
+  position: relative;
+  font-weight: 500;
+  color: black;
+  border-bottom: 1px solid var(--primary-color);
+}
+
+.tools-side-properties-content-container {
+  padding: 10px 0;
+}
+
+.tools-side-properties-header {
+  width: 100%;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 20px;
+  padding: 0 10px;
+  background-color: var(--primary-color-dark);
+  color: white;
+}
+
+.tools-side-properties-table-wrapper {
+  padding: 15px 10px 10px;
+}
+
+.tools-side-properties-table {
+  width: 100%;
+  text-align: left;
+  list-style-type: none;
+}
+
+.tools-side-properties-table li {
+  display: grid;
+  grid-template-columns: 100px 1fr;
+  font-size: 10px;
+  border-bottom: solid 1px var(--grayed);
+}
+
+.tools-side-properties-table li:first-child {
+  font-weight: 700;
+  font-size: 12px;
+  color: black;
+  margin-bottom: 8px;
+}
+
+.tools-side-properties-table li > :not(:first-child) {
+  width: 100%;
+}
+/* #endregion Tools side tab */
 
 /* Feature sidebar tab */
 
