--- a/styles.css
+++ b/styles.css
@@ -228,9 +228,32 @@ body {
 
 /* Spatial tree */
 
+.tree-content-container{
+  padding: 5px 10px 10px;
+}
+
 .tree-container {
   width: 100%;
   height: 100%;
+  line-height: 20px;
+}
+
+.tree-content span {
+  cursor: pointer;
+  user-select: none;
+  display: block;
+  width: 100%;
+  font-size: 11px;
+}
+
+.tree-content > ul > li:first-child {
+  margin: 0;
+  border-top: none;
+}
+
+.tree-content > ul > li:first-child > span {
+  font-weight: 500;
+  font-size: 14px;
 }
 
 .tree-content-container ul {
@@ -250,13 +273,6 @@ body {
 
 .tree-content-container li > ul {
   margin-left: 5px;
-}
-
-.tree-content span {
-  cursor: pointer;
-  user-select: none;
-  display: block;
-  width: 100%;
 }
 
 .tree-content span.active-selection-leaf {
