Implemented feature disabling until they are ready to be interacted with

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,11 @@ body {
   z-index: 99;
 }
 
+.tools-side-feature-icon.notready{
+  opacity: 50%;
+  cursor: not-allowed;
+}
+
 .tools-side-feature > :not(.tools-side-feature-icon) {
   display: none;
 }
