--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
   top: 0;
   left: 0;
   outline: none;
+  background-image: linear-gradient(0, #529554a4 0%, #9de7fca4 80%);
 }
 
 #file-input {
