--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@
 html,
 body {
   overflow: hidden;
+  font-family: Montserrat;
 }
 
 #three-canvas {
@@ -427,24 +428,20 @@ body {
 /* Loading popup */
 
 .modal-loading-container {
+  color: var(--primary-color-dark);
   width: max-content;
-  max-width: 300px;
+  /* max-width: 300px; */
   height: max-content;
-  max-height: 300px;
+  /* max-height: 300px; */
   border: var(--primary-color-dark) 1px solid;
   background-color: white;
   padding: 50px 100px;
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
   place-items: center;
   gap: 30px;
   font-size: 30px;
   border-radius: 10px;
   user-select: none;
-}
-
-.modal-loading-container > i {
-  font-size: 40px;
 }
 
 /* #region animations */
@@ -462,6 +459,95 @@ body {
 .anim-spinner {
   animation: spin 1.5s linear infinite;
 }
+
+/* #region better spinner */
+
+.lds-roller {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: var(--primary-color-dark);
+  margin: -4px 0 0 -4px;
+}
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.lds-roller div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.lds-roller div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* #endregion better spinner */
 
 /* gradient moving */
 .anim-gradient {
