--- a/styles.css
+++ b/styles.css
@@ -411,6 +411,23 @@ body {
   animation: icon-shadow-pulsing 1s infinite alternate linear;
 }
 
+/* Help */
+
+.feature-help-container {
+  color: var(--primary-color-dark);
+  width: max-content;
+  height: max-content;
+  border: var(--primary-color-dark) 1px solid;
+  background-color: white;
+  padding: 50px 100px;
+  display: grid;
+  place-items: center;
+  gap: 30px;
+  font-size: 30px;
+  border-radius: 10px;
+  user-select: none;
+}
+
 /* #endregion Floating buttons features */
 
 /* Modal */
@@ -420,7 +437,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: var(--transparent-background-dark);
-  z-index: 1;
+  z-index: 99;
   display: grid;
   place-items: center;
 }
