--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
   --grayed: #9a9a9a;
   --scroll-bar-color: #c5c5c5;
   --scroll-bar-bg-color: #f6f6f6;
+  --border-radius-small: 4px;
+  --border-radius-regular: 8px;
 }
 
 * {
@@ -87,7 +89,7 @@ body {
   display: grid;
   place-items: center;
   padding: 8px;
-  border-radius: 4px;
+  border-radius: var(--border-radius-small);
   background-color: var(--primary-color-dark);
   box-shadow: 0px 1px 1px 0 var(--primary-color);
   z-index: 99;
@@ -128,11 +130,11 @@ body {
   grid-column: span 3;
   font-weight: 500;
   user-select: none;
-  word-break: break-word; 
+  word-break: break-word;
 }
 
 .tools-side-feature.feature-active {
-  border-radius: 8px;
+  border-radius: var(--border-radius-regular);
   background-color: var(--primary-color-dark);
   grid-template-columns: 40px auto 39px;
   place-items: center;
@@ -224,12 +226,12 @@ body {
   width: 100%;
 }
 
-.tools-side-properties-table li span{
+.tools-side-properties-table li span {
   padding: 2px 5px;
   line-height: 20px;
 }
 
-.tools-side-properties-table li span:first-child{
+.tools-side-properties-table li span:first-child {
   height: max-content;
 }
 
@@ -360,7 +362,7 @@ body {
 }
 
 @keyframes pulsing {
-  100%{
+  100% {
     transform: scale(1.2);
   }
 }
@@ -368,7 +370,7 @@ body {
 
 /* #region Floating buttons features */
 
-.features-floating-buttons{
+.features-floating-buttons {
   position: absolute;
   width: max-content;
   top: calc(100% - 80px);
@@ -378,13 +380,13 @@ body {
   gap: 40px;
 }
 
-.features-floating-buttons .feature-button{
+.features-floating-buttons .feature-button {
   width: 40px;
   height: 40px;
   display: grid;
   place-items: center;
   padding: 8px;
-  border-radius: 4px;
+  border-radius: var(--border-radius-small);
   background-color: var(--primary-color-dark);
   box-shadow: 0px 1px 1px 0 var(--primary-color);
   z-index: 99;
@@ -398,7 +400,7 @@ body {
   cursor: not-allowed;
 }
 
-.features-floating-buttons .feature-button:not(.not-ready):hover{
+.features-floating-buttons .feature-button:not(.not-ready):hover {
   transform: scale(1.1);
   /* animation: icon-shadow-pulsing 1s infinite alternate; */
   box-shadow: 0 0 4px var(--primary-color-light);
@@ -411,26 +413,84 @@ body {
   animation: icon-shadow-pulsing 1s infinite alternate linear;
 }
 
-/* Help */
+/* #endregion Floating buttons features */
 
-.feature-help-container {
+/* #region Feature help */
+
+.feature-helper-container {
+  background-color: white;
   color: var(--primary-color-dark);
-  width: max-content;
+  max-width: 70%;
+  width: auto;
+  max-height: 90%;
   height: max-content;
   border: var(--primary-color-dark) 1px solid;
-  background-color: white;
-  padding: 50px 100px;
+  padding: 40px;
   display: grid;
   place-items: center;
   gap: 30px;
   font-size: 30px;
-  border-radius: 10px;
-  user-select: none;
+  border-radius: var(--border-radius-regular);
+  overflow: scroll;
 }
 
-/* #endregion Floating buttons features */
+.feature-helper-container .feature-helper-tip-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 20px;
+  place-items: center;
+}
 
-/* Modal */
+.feature-helper-container .feature-helper-tip-icon {
+  width: 60px;
+  height: 60px;
+  display: grid;
+  place-items: center;
+  padding: 8px;
+  border-radius: var(--border-radius-small);
+  background-color: var(--primary-color-dark);
+}
+.feature-helper-container .feature-helper-tip-title {
+  width: 100%;
+  font-size: 40px;
+}
+.feature-helper-container .feature-helper-tip-description {
+  /* border: darkorchid 1px solid; */
+  width: 100%;
+  grid-column: 2;
+  display: grid;
+  gap: 16px;
+  font-size: 16px;
+}
+.feature-helper-container .feature-helper-tip-description-line {
+  text-align: left;
+  line-break: strict;
+  line-height: 24px;
+}
+.feature-helper-container .feature-helper-seperator{
+  width: 100%;
+  height: 2px;
+  background-color: var(--primary-color-light);
+  border-radius: 100%;
+  box-shadow: inset 0 0 4px 0 white;
+}
+
+@media only screen and (max-width: 889px) {
+
+  .feature-helper-container .feature-helper-tip-description {
+    grid-column: span 2;
+  }
+
+  .feature-helper-container{
+    max-width: 90%;
+    padding: 20px;
+  }
+}
+
+/* #endregion Feature help */
+
+/* #region Modal */
 
 .modal {
   position: fixed;
@@ -441,6 +501,8 @@ body {
   display: grid;
   place-items: center;
 }
+
+/* #endregion Modal */
 
 /* #region animations */
 
@@ -570,12 +632,12 @@ body {
 @keyframes sidetools-feature-active {
   0% {
     width: 40px;
-    border-radius: 4px;
+    border-radius: var(--border-radius-small);
     opacity: 70%;
   }
   100% {
     width: 100%;
-    border-radius: 8px;
+    border-radius: var(--border-radius-regular);
   }
 }
 
