--- a/styles.css
+++ b/styles.css
@@ -417,21 +417,77 @@ body {
 
 /* #region Feature help */
 
-.feature-helper-container {
+.feature-helper-wrapper{
   background-color: white;
-  color: var(--primary-color-dark);
-  max-width: 70%;
-  width: auto;
-  max-height: 90%;
-  height: max-content;
   border: var(--primary-color-dark) 1px solid;
-  padding: 40px;
+  border-radius: var(--border-radius-regular);
+  padding-bottom: 10px;
+  height: 80%;
+  display: grid;
+}
+.feature-helper-header{
+  background-color: var(--primary-color-dark);
+  border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;
+  margin-bottom: 1px;
+  color: white;
+  font-size: 30px;
+  line-height: 20px;
+  display: grid;
+  grid-template-columns: 60px auto 39px;
+  place-items: center;
+  overflow: hidden;
+}
+.feature-helper-header-icon{
+  width: 60px;
+  height: 60px;
+  display: grid;
+  place-items: center;
+  padding: 8px;
+  border-radius: var(--border-radius-small);
+  background-color: var(--primary-color-dark)
+}
+.feature-helper-header-text{
+  color: white;
+  width: 100%;
+  font-weight: 700;
+  user-select: none;
+}
+.feature-helper-header-close{
+  margin: 0 10px 0 5px;
+  height: 24px;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.feature-helper-header-close:hover{
+  transform: scale(1.2);
+  transition: all 0.5s;
+}
+.feature-helper-header-subtitle{
+  font-size: 20px;
+  background-color: var(--primary-color-light);
+  color: white;
+  width: 100%;
+  padding: 10px;
+  overflow: hidden;
+  grid-column: span 3;
+  font-weight: 500;
+  user-select: none;
+  word-break: break-word;
+}
+.feature-helper-wrapper-buffer{
+  padding: 20px;
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+}
+
+.feature-helper-container {
+  color: var(--primary-color-dark);
+  height: max-content;
   display: grid;
   place-items: center;
   gap: 30px;
   font-size: 30px;
-  border-radius: var(--border-radius-regular);
-  overflow: scroll;
 }
 
 .feature-helper-container .feature-helper-tip-container {
@@ -458,10 +514,12 @@ body {
 .feature-helper-container .feature-helper-tip-description {
   /* border: darkorchid 1px solid; */
   width: 100%;
+  align-self: flex-start;
   grid-column: 2;
   display: grid;
   gap: 16px;
   font-size: 16px;
+  padding-right: 20px;
 }
 .feature-helper-container .feature-helper-tip-description-line {
   text-align: left;
@@ -478,13 +536,23 @@ body {
 
 @media only screen and (max-width: 889px) {
 
-  .feature-helper-container .feature-helper-tip-description {
-    grid-column: span 2;
+  .feature-helper-wrapper{
+    width: 90%;
+    padding: 5px;
   }
 
-  .feature-helper-container{
-    max-width: 90%;
-    padding: 20px;
+  .feature-helper-wrapper-buffer{
+    padding: 5px;
+  }
+  
+  .feature-helper-container {
+    width: 100%;
+    padding: 5px;
+  }
+
+  .feature-helper-container .feature-helper-tip-description {
+    grid-column: span 2;
+    padding: 0;
   }
 }
 
@@ -494,12 +562,15 @@ body {
 
 .modal {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
   background-color: var(--transparent-background-dark);
   z-index: 99;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* #endregion Modal */
