--- a/styles.css
+++ b/styles.css
@@ -381,7 +381,6 @@ body {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  border-bottom: solid 1px lightgray;
   font-size: 14px;
 }
 
@@ -393,15 +392,90 @@ body {
   /**/
 }
 
-.saved-list {
+#saved-views-list {
   width: 100%;
 }
 
-.saved-list > li {
+#saved-views-list li {
   width: 100%;
   height: 25px;
+  padding: 5px;
   display: grid;
-  grid-template-columns: 14px 1fr 14px;
+  grid-template-columns: 20px 1fr 20px;
+  gap: 5px;
+  align-items: center;
+  box-shadow: inset 18px 0 20px 0px rgba(255, 255, 255, 1);
+}
+
+#saved-views-list li:hover {
+  background-color: var(--primary-color-light-transparent);
+  background: linear-gradient(-90deg, white, white, var(--primary-color-light));
+  background-size: 200% 200%;
+  background-color: var(--primary-color-light-transparent);
+}
+
+#saved-views-list li > img {
+  height: 15px;
+  transition: all 0.3s;
+}
+
+#saved-views-list li > img:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: all 0.3s;
+}
+
+#saved-views-list li > span {
+  font-size: 12px;
+  line-height: 15px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+#saved-views-list.active-saved-view {
+}
+
+.saved-view-form {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  gap: 16px;
+  align-items: center;
+}
+
+.saved-view-form-note-label {
+  text-align: center;
+}
+
+#saved-view-form-note-input {
+  border-radius: var(--border-radius-small);
+  border: solid 1px lightgray;
+  height: 30px;
+  text-align: center;
+}
+
+#saved-view-form-warning {
+  grid-column: span 2;
+  width: 100%;
+  text-align: center;
+  color: red;
+}
+
+.saved-view-form-submit {
+  grid-column: span 2;
+  background-color: var(--primary-color-dark);
+  color: white;
+  border: none;
+  border-radius: var(--border-radius-small);
+  height: 30px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.saved-view-form-submit:hover {
+  box-shadow: 0px 0px 4px 4px var(--primary-color-light-transparent);
+  transform: scaleX(1.02);
+  transition: all 0.3s;
 }
 
 /* #endregion saved views */
@@ -473,10 +547,14 @@ body {
   background-color: white;
   border: var(--primary-color-dark) 1px solid;
   border-radius: var(--border-radius-regular);
-  padding-bottom: 10px;
-  height: 80%;
   display: grid;
 }
+
+.popup-header-wrapper.popup-header-wrapper-full {
+  height: 80%;
+  padding-bottom: 10px;
+}
+
 .popup-header {
   background-color: var(--primary-color-dark);
   border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;
@@ -526,16 +604,19 @@ body {
   word-break: break-word;
 }
 .popup-header-content {
-  margin: 20px 0;
-  padding: 0 20px;
+  padding: 20px 20px;
   width: 100%;
   overflow: scroll;
+}
+
+.popup-header-wrapper.popup-header-wrapper-full .popup-header-content {
+  margin: 20px 0;
+  padding: 0 20px;
 }
 
 /* #endregion popup with header */
 
 /* #region Feature help */
-
 .feature-helper-content-container {
   display: grid;
   gap: 20px;
@@ -769,10 +850,45 @@ body {
   }
 }
 
+@keyframes kf_shake {
+  0% {
+    transform: translate(20px);
+  }
+  12% {
+    transform: translate(-20px);
+  }
+  24% {
+    transform: translate(15px);
+  }
+  36% {
+    transform: translate(-15px);
+  }
+  48% {
+    transform: translate(10px);
+  }
+  60% {
+    transform: translate(-10px);
+  }
+  72% {
+    transform: translate(8px);
+  }
+  84% {
+    transform: translate(-8px);
+  }
+  100% {
+    transform: translate(0px);
+  }
+}
+
 /* #endregion animations */
 
 .interaction-cursor {
   cursor: pointer;
+}
+
+.error {
+  animation: kf_shake 1s linear;
+  border: red 2px solid !important;
 }
 
 .hidden {
